--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,8 @@
 cmake_minimum_required(VERSION 3.26)
 project(ThreadPool)
 
+include(cmake/definitions.cmake)
+
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_FLAGS "-std=c++17")
 
@@ -8,5 +10,5 @@ set(CMAKE_INCLUDE_CURRENT_DIR ON)
 
 add_executable(
     ${PROJECT_NAME}
-    code_samples/usage.cc
+        code_samples/current_thread_pool.cc
 )
