--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,12 +3,12 @@ project(ThreadPool)
 
 include(cmake/definitions.cmake)
 
-set(CMAKE_CXX_STANDARD 17)
-set(CMAKE_CXX_FLAGS "-std=c++17")
+set(CMAKE_CXX_STANDARD 20)
+set(CMAKE_CXX_FLAGS "-std=c++20")
 
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
 
 add_executable(
     ${PROJECT_NAME}
-        code_samples/new_wait.cc
+        code_samples/usage.cc
 )
