--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,11 +4,13 @@ project(ThreadPool)
 include(cmake/definitions.cmake)
 
 set(CMAKE_CXX_STANDARD 20)
-set(CMAKE_CXX_FLAGS "-std=c++20")
+set(CMAKE_CXX_FLAGS "-std=c++20 -Wall -Werror -Wextra")
 
-set(CMAKE_INCLUDE_CURRENT_DIR ON)
+include_directories(
+        ${CMAKE_CURRENT_SOURCE_DIR}/include
+)
 
 add_executable(
     ${PROJECT_NAME}
-        code_samples/usage.cc
+        code_samples/thread_pool.cc
 )
