--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,14 +1,12 @@
-cmake_minimum_required(VERSION 3.26)
+cmake_minimum_required(VERSION 3.5...3.16)
 project(ThreadPool)
 
 include(cmake/definitions.cmake)
 
-set(CMAKE_CXX_STANDARD 20)
-set(CMAKE_CXX_FLAGS "-std=c++20 -Wall -Werror -Wextra")
+set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_FLAGS "-std=c++17 -Wall -Werror -Wextra")
 
-include_directories(
-        ${CMAKE_CURRENT_SOURCE_DIR}/include
-)
+include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include)
 
 add_executable(
     ${PROJECT_NAME}
